--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1,5 +1,5 @@
 [/Script/UnrealEd.LevelEditorPlaySettings]
-NewWindowWidth=2617
+NewWindowWidth=2870
 NewWindowHeight=1670
 LaptopScreenResolutions=(Description="Apple MacBook Air 11",Width=1366,Height=768,AspectRatio="16:9",bCanSwapAspectRatio=True,ProfileName="")
 LaptopScreenResolutions=(Description="Apple MacBook Air 13\"",Width=1440,Height=900,AspectRatio="16:10",bCanSwapAspectRatio=True,ProfileName="")
@@ -71,7 +71,7 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=2617,Y=1670)
+LastSize=(X=2870,Y=1670)
 LastExecutedLaunchDevice=WindowsNoEditor@DESKTOP-RT293EV
 LastExecutedLaunchName=DESKTOP-RT293EV
 LastExecutedPIEPreviewDevice=
@@ -106,38 +106,36 @@ LastLevel=/Game/Map/NewMap
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/Enemy/realAI/AI_Controller.AI_Controller
-OpenAssetsAtExit=/Game/Enemy/realAI/随机行走.随机行走
-OpenAssetsAtExit=/Game/Enemy/realAI/NewBlackboardData.NewBlackboardData
-OpenAssetsAtExit=/Game/Enemy/realAI/走向玩家.走向玩家
+OpenAssetsAtExit=/Game/Player/new/Anim_TPC_Base.Anim_TPC_Base
+OpenAssetsAtExit=/Game/Player/new/PLayer.PLayer
+OpenAssetsAtExit=/Game/Enemy/EnemyGoblin/Animations/Anim_Hit_Montage.Anim_Hit_Montage
 OpenAssetsAtExit=/Game/Enemy/EnemyGoblin/gblbp.gblbp
-OpenAssetsAtExit=/Game/Enemy/realAI/NewBehaviorTree.NewBehaviorTree
 OpenAssetsAtExit=/Game/Enemy/EnemyGoblin/gbl.gbl
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Enemy/realAI/随机行走
-MRUItem1=/Game/Enemy/realAI/走向玩家
-MRUItem2=/Game/Enemy/realAI/BTDecorator_BlueprintBase_New
-MRUItem3=/Game/Enemy/EnemyGoblin/Animations/Anim_Lose
-MRUItem4=/Game/Enemy/EnemyGoblin/Animations/Anim_Fall
-MRUItem5=/Game/Enemy/AI
-MRUItem6=/Game/Player/new/Anim_TPC_Base
-MRUItem7=/Game/Player/PlayerAnimBlueprint
-MRUItem8=/Game/Enemy/realAI/AI_Controller
-MRUItem9=/Game/Enemy/realAI/NewBehaviorTree
-MRUItem10=/Game/Enemy/EnemyGoblin/gbl
-MRUItem11=/Game/Enemy/EnemyGoblin/gblbp
-MRUItem12=/Game/Enemy/AI_Anim1
-MRUItem13=/Game/Enemy/realAI/AI3
-MRUItem14=/Game/Enemy/EnemyGoblin/Animations/Anim_Attack1_Montage
-MRUItem15=/Game/Enemy/EnemyGoblin/Animations/Anim_Attack2
-MRUItem16=/Game/Enemy/EnemyGoblin/Animations/Anim_Attack1
-MRUItem17=/Game/Enemy/EnemyGoblin/Animations/Anim_Walk
-MRUItem18=/Game/Enemy/EnemyGoblin/AI3_Child
-MRUItem19=/Game/Enemy/敌人攻击1_Montage
+MRUItem0=/Game/Enemy/EnemyGoblin/Animations/Anim_Hit_Montage
+MRUItem1=/Game/Player/new/Anim_TPC_Base
+MRUItem2=/Game/Player/new/PLayer
+MRUItem3=/Game/Enemy/EnemyGoblin/Animations/Anim_Hit
+MRUItem4=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem5=/Game/Enemy/realAI/AI3
+MRUItem6=/Game/Enemy/realAI/BTDecorator_BlueprintBase_New
+MRUItem7=/Game/Enemy/EnemyGoblin/gbl
+MRUItem8=/Game/Enemy/realAI/NewBehaviorTree
+MRUItem9=/Game/Enemy/EnemyGoblin/gblbp
+MRUItem10=/Game/Enemy/realAI/走向玩家
+MRUItem11=/Game/Enemy/realAI/NewBlackboardData
+MRUItem12=/Game/Enemy/realAI/随机行走
+MRUItem13=/Game/Enemy/realAI/AI_Controller
+MRUItem14=/Game/Enemy/EnemyGoblin/Animations/Anim_Lose
+MRUItem15=/Game/Enemy/EnemyGoblin/Animations/Anim_Fall
+MRUItem16=/Game/Enemy/AI
+MRUItem17=/Game/Player/PlayerAnimBlueprint
+MRUItem18=/Game/Enemy/AI_Anim1
+MRUItem19=/Game/Enemy/EnemyGoblin/Animations/Anim_Attack1_Montage
 
 [DetailCategories]
 InventoryComponent_C.ComponentTick=True
@@ -1500,6 +1498,9 @@ BTDecorator_BlueprintBase_New_C.Description=True
 BTDecorator_BlueprintBase_New_C.Condition=True
 AnimStateNode.Events=False
 K2Node_SetFieldsInStruct.PinOptions=True
+走向玩家_C.默认=True
+EditorCompositeSection.Section=True
+EditorCompositeSection.AnimLink=True
 
 [AssetEditorToolkitTabLocation]
 /Game/InventorySystem/InventoryComponent.InventoryComponent=0
@@ -1584,6 +1585,10 @@ K2Node_SetFieldsInStruct.PinOptions=True
 /Game/Enemy/EnemyGoblin/Animations/Anim_Attack2.Anim_Attack2=0
 /Game/Enemy/EnemyGoblin/Animations/Anim_Fall.Anim_Fall=0
 /Game/Enemy/EnemyGoblin/Animations/Anim_Lose.Anim_Lose=0
+/Game/Enemy/realAI/BTDecorator_BlueprintBase_New.BTDecorator_BlueprintBase_New=0
+/Engine/EditorBlueprintResources/StandardMacros.StandardMacros=0
+/Game/Enemy/EnemyGoblin/Animations/Anim_Hit.Anim_Hit=0
+/Game/Enemy/EnemyGoblin/Animations/Anim_Hit_Montage.Anim_Hit_Montage=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1693,7 +1698,7 @@ ContentWidget="\"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object.Render Transform.RenderTransform\" "
 Widget=
 Visual=
-Object="\"Object.Blackboard\" "
+Object="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
 Overlay="\"Object.Render Transform.RenderTransform\" "
 CanvasPanel="\"Object.Render Transform.RenderTransform\" "
 PlayerUI_C=
@@ -1711,33 +1716,33 @@ NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BlackboardData="\"Object.Blackboard\" "
-DataAsset="\"Object.Blackboard\" "
+DataAsset="\"Object.SkeletalMeshes\" "
 AIPerceptionComponent="\"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0]\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense.DetectionByAffiliation\" "
-ActorComponent=
+ActorComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
 BehaviorTreeGraphNode_Root="\"Object.AI.AI|BehaviorTree\" "
 BehaviorTreeGraphNode="\"Object.AI.AI|BehaviorTree\" "
 AIGraphNode="\"Object.AI.AI|BehaviorTree\" "
-EdGraphNode="\"Object.AI.AI|BehaviorTree\" "
+EdGraphNode="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
-SkeletalMeshComponent=
-SkinnedMeshComponent=
-MeshComponent=
-PrimitiveComponent=
-SceneComponent=
-AnimGraphNode_LayeredBoneBlend="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[1]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[2]\" "
-AnimGraphNode_BlendListBase="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[1]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[2]\" "
-AnimGraphNode_Base=
-K2Node=
+SkeletalMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
+SkinnedMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
+MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
+PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
+SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
+AnimGraphNode_LayeredBoneBlend="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
+AnimGraphNode_BlendListBase="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
+AnimGraphNode_Base="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
+K2Node="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
 CapsuleComponent=
 ShapeComponent=
 AnimSequence=
 AnimSequenceBase=
 AnimationAsset=
 PLayer_C=
-Character="\"Object.已死亡\" "
-Pawn="\"Object.已死亡\" "
+Character=
+Pawn=
 Anim_TPC_Base_C=
-AnimInstance="\"Object.isDead\" "
+AnimInstance=
 DragDrop_C="\"Object.被拖动的控件\" "
 DragDropOperation="\"Object.Payload\" "
 InventoryComponent_C=
@@ -1746,7 +1751,7 @@ AI2_C=
 LandscapeEditorObject="\"Object.New Landscape.ImportLandscape_Layers.ImportLandscape_Layers[5]\" "
 Bullet_C="\"Object.As PLayer\" "
 StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
-SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[9]\" "
+SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[9]\" "
 BoxComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[10]\" "
 NewMap_C="\"Object.AI数组\" "
 LevelScriptActor="\"Object.AI数组\" "
@@ -1759,8 +1764,8 @@ AI_Controller_C=
 AIController=
 Controller=
 AI3_Child_C=
-gbl_C="\"Object.isDead\" "
-gblbp_C="\"Object.已死亡\" "
+gbl_C=
+gblbp_C=
 走向玩家_C=
 BTTask_BlueprintBase=
 BTTaskNode=
@@ -2835,7 +2840,7 @@ TimelineEnabledSnaps=MontageSection
 SkeletalMeshComponent=SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.LOD,
 BlendSpace=BlendSpace.Axis Settings.Horizontal Axis,BlendSpace.Axis Settings.Vertical Axis,
 AimOffsetBlendSpace=AimOffsetBlendSpace.Axis Settings.Horizontal Axis,AimOffsetBlendSpace.Axis Settings.Vertical Axis,
-K2Node_VariableGet=K2Node_VariableGet.DefaultValueCategory.None,SkeletalMeshComponent.Collision.Collision,AI3_Child_C.Rendering.LOD,AI_C.Rendering.LOD,AI3_C.Rendering.LOD,
+K2Node_VariableGet=K2Node_VariableGet.DefaultValueCategory.None,SkeletalMeshComponent.Collision.Collision,AI3_Child_C.Rendering.LOD,AI_C.Rendering.LOD,AI3_C.Rendering.LOD,CapsuleComponent.Collision.Collision,
 PLayer_C=PLayer_C.Rendering.LOD,
 K2Node_VariableSet=K2Node_VariableGet.DefaultValueCategory.None,SkeletalMeshComponent.Collision.Collision,AI3_Child_C.Rendering.LOD,AI_C.Rendering.LOD,AI3_C.Rendering.LOD,
 Anim_TPC_Base_C=
@@ -2858,7 +2863,7 @@ Bullet_C=
 SphereComponent=SphereComponent.Collision.Collision,
 NewMap_C=
 AI3_C=
-CapsuleComponent=
+CapsuleComponent=CapsuleComponent.Collision.Collision,
 PostProcessVolume=PostProcessVolume.Lens.Lens
 BrushComponent=
 NewAnimBlueprint_C=
@@ -2873,8 +2878,8 @@ MulticastInlineDelegatePropertyWrapper=K2Node_VariableGet.DefaultValueCategory.N
 走向玩家_C=
 
 [PlacementMode]
-RecentlyPlaced=/Game/Enemy/EnemyGoblin/gblbp.gblbp;
 RecentlyPlaced=/Game/Enemy/realAI/AI3.AI3;
+RecentlyPlaced=/Game/Enemy/EnemyGoblin/gblbp.gblbp;
 RecentlyPlaced=/Game/Enemy/AI.AI;
 RecentlyPlaced=/Game/Enemy/AI2.AI2;
 RecentlyPlaced=/Game/Enemy/EnemyGoblin/AI3_Child.AI3_Child;
