--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -71,7 +71,7 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=2870,Y=1670)
+LastSize=(X=0,Y=0)
 LastExecutedLaunchDevice=WindowsNoEditor@DESKTOP-RT293EV
 LastExecutedLaunchName=DESKTOP-RT293EV
 LastExecutedPIEPreviewDevice=
@@ -81,11 +81,12 @@ MultipleInstancePositions=(X=348,Y=0)
 
 [MRU]
 MRUItem0=/Game/Map/NewMap
-MRUItem1=/Game/Stylized_Forest/Maps/Demonstration
-MRUItem2=/Game/Stylized_Forest/Maps/Overview
-MRUItem3=/Game/NewMap
-MRUItem4=/Game/Fantastic_Village_Pack/maps/map_village_night
-MRUItem5=/Game/Begin
+MRUItem1=/Game/Enemy/EnemyGoblin/Map/Showcase_EnemyGoblin
+MRUItem2=/Game/Stylized_Forest/Maps/Demonstration
+MRUItem3=/Game/Stylized_Forest/Maps/Overview
+MRUItem4=/Game/NewMap
+MRUItem5=/Game/Fantastic_Village_Pack/maps/map_village_night
+MRUItem6=/Game/Begin
 
 [WidgetTemplatesExpanded]
 编辑器=False
@@ -105,37 +106,36 @@ MRUItem5=/Game/Begin
 LastLevel=/Game/Map/NewMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/Player/new/Anim_TPC_Base.Anim_TPC_Base
+CleanShutdown=True
 OpenAssetsAtExit=/Game/Player/new/PLayer.PLayer
-OpenAssetsAtExit=/Game/Enemy/EnemyGoblin/Animations/Anim_Hit_Montage.Anim_Hit_Montage
 OpenAssetsAtExit=/Game/Enemy/EnemyGoblin/gblbp.gblbp
-OpenAssetsAtExit=/Game/Enemy/EnemyGoblin/gbl.gbl
+OpenAssetsAtExit=/Game/Enemy/EnemyGoblin/AI_PhysicalMaterial.AI_PhysicalMaterial
+OpenAssetsAtExit=/Game/Enemy/EnemyGoblin/phy.phy
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Enemy/EnemyGoblin/Animations/Anim_Hit_Montage
-MRUItem1=/Game/Player/new/Anim_TPC_Base
-MRUItem2=/Game/Player/new/PLayer
-MRUItem3=/Game/Enemy/EnemyGoblin/Animations/Anim_Hit
-MRUItem4=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem5=/Game/Enemy/realAI/AI3
-MRUItem6=/Game/Enemy/realAI/BTDecorator_BlueprintBase_New
-MRUItem7=/Game/Enemy/EnemyGoblin/gbl
-MRUItem8=/Game/Enemy/realAI/NewBehaviorTree
-MRUItem9=/Game/Enemy/EnemyGoblin/gblbp
-MRUItem10=/Game/Enemy/realAI/走向玩家
-MRUItem11=/Game/Enemy/realAI/NewBlackboardData
-MRUItem12=/Game/Enemy/realAI/随机行走
-MRUItem13=/Game/Enemy/realAI/AI_Controller
-MRUItem14=/Game/Enemy/EnemyGoblin/Animations/Anim_Lose
-MRUItem15=/Game/Enemy/EnemyGoblin/Animations/Anim_Fall
-MRUItem16=/Game/Enemy/AI
-MRUItem17=/Game/Player/PlayerAnimBlueprint
-MRUItem18=/Game/Enemy/AI_Anim1
-MRUItem19=/Game/Enemy/EnemyGoblin/Animations/Anim_Attack1_Montage
+MRUItem0=/Game/Enemy/EnemyGoblin/AI_PhysicalMaterial
+MRUItem1=/Game/Map/NewMap
+MRUItem2=/Game/Enemy/EnemyGoblin/Map/Showcase_EnemyGoblin
+MRUItem3=/Engine/BasicShapes/BasicShapeMaterial
+MRUItem4=/Game/Enemy/EnemyGoblin/NewPhysicalMaterial
+MRUItem5=/Game/Enemy/EnemyGoblin/Materials/MI_EnemyGoblin_02
+MRUItem6=/Game/Enemy/EnemyGoblin/Materials/M_EnemyGoblin_01
+MRUItem7=/Game/Enemy/EnemyGoblin/NewBlueprint
+MRUItem8=/Game/Enemy/EnemyGoblin/Materials/M_Showcase2
+MRUItem9=/Game/Door/Door
+MRUItem10=/Game/Door/Door_Actor
+MRUItem11=/Game/Enemy/AI
+MRUItem12=/Game/Player/new/PLayer
+MRUItem13=/Game/Enemy/AI_HealthBar
+MRUItem14=/Game/Enemy/EnemyGoblin/gbl
+MRUItem15=/Game/Enemy/EnemyGoblin/gblbp
+MRUItem16=/Game/Enemy/EnemyGoblin/Animations/Anim_Hit_Montage
+MRUItem17=/Game/Player/new/Anim_TPC_Base
+MRUItem18=/Game/Enemy/EnemyGoblin/Animations/Anim_Hit
+MRUItem19=/Engine/EditorBlueprintResources/StandardMacros
 
 [DetailCategories]
 InventoryComponent_C.ComponentTick=True
@@ -1501,6 +1501,44 @@ K2Node_SetFieldsInStruct.PinOptions=True
 走向玩家_C.默认=True
 EditorCompositeSection.Section=True
 EditorCompositeSection.AnimLink=True
+WidgetComponent.Variable=True
+WidgetComponent.TransformCommon=True
+WidgetComponent.Sockets=True
+WidgetComponent.Materials=True
+WidgetComponent.UserInterface=True
+WidgetComponent.Interaction=True
+WidgetComponent.ComponentTick=True
+WidgetComponent.Animation=True
+WidgetComponent.Layers=True
+WidgetComponent.Physics=True
+WidgetComponent.Collision=True
+WidgetComponent.Rendering=True
+WidgetComponent.Navigation=True
+WidgetComponent.VirtualTexture=True
+WidgetComponent.Tags=True
+WidgetComponent.ComponentReplication=True
+WidgetComponent.Cooking=True
+WidgetComponent.Events=True
+Door_Actor_C.Tick=True
+StaticMesh.StaticMeshMaterials=True
+StaticMesh.LODCustomMode=True
+StaticMesh.LOD0=True
+StaticMesh.LodSettings=True
+StaticMesh.StaticMesh=True
+StaticMesh.Collision=True
+StaticMesh.ImportSettings=True
+StaticMesh.RayTracing=True
+StaticMesh.Navigation=True
+NewBlueprint_C.PhysicalMaterial=True
+NewBlueprint_C.Advanced=True
+NewBlueprint_C.Destruction=True
+NewBlueprint_C.PhysicalProperties=True
+NewBlueprint_C.默认=True
+phy_C.默认=True
+phy_C.PhysicalMaterial=True
+phy_C.Advanced=True
+phy_C.Destruction=True
+phy_C.PhysicalProperties=True
 
 [AssetEditorToolkitTabLocation]
 /Game/InventorySystem/InventoryComponent.InventoryComponent=0
@@ -1589,6 +1627,15 @@ EditorCompositeSection.AnimLink=True
 /Engine/EditorBlueprintResources/StandardMacros.StandardMacros=0
 /Game/Enemy/EnemyGoblin/Animations/Anim_Hit.Anim_Hit=0
 /Game/Enemy/EnemyGoblin/Animations/Anim_Hit_Montage.Anim_Hit_Montage=0
+/Game/Enemy/EnemyGoblin/gbl.gbl=0
+/Game/Door/Door.Door=0
+/Game/Door/Door_Actor.Door_Actor=0
+/Game/Enemy/EnemyGoblin/Materials/M_Showcase2.M_Showcase2=0
+/Game/Enemy/EnemyGoblin/Materials/M_EnemyGoblin_01.M_EnemyGoblin_01=0
+/Game/Enemy/EnemyGoblin/Materials/MI_EnemyGoblin_02.MI_EnemyGoblin_02=0
+/Game/Enemy/AI_HealthBar.AI_HealthBar=0
+/Engine/BasicShapes/BasicShapeMaterial.BasicShapeMaterial=0
+/Game/Enemy/EnemyGoblin/AI_PhysicalMaterial.AI_PhysicalMaterial=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1691,14 +1738,16 @@ PropertyWrapper.Variable=False
 SphereComponent.Rendering=False
 K2Node_VariableGet.Variable=False
 AI3_Child_C.Actor=False
+WidgetComponent.UserInterface=False
+Door_Actor_C.Actor=True
 
 [DetailPropertyExpansion]
 Border="\"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object.Render Transform.RenderTransform\" "
-Widget=
-Visual=
-Object="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
+Widget="\"Object.Appearance.FillColorAndOpacity\" "
+Visual="\"Object.Appearance.FillColorAndOpacity\" "
+Object=
 Overlay="\"Object.Render Transform.RenderTransform\" "
 CanvasPanel="\"Object.Render Transform.RenderTransform\" "
 PlayerUI_C=
@@ -1718,29 +1767,29 @@ Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BlackboardData="\"Object.Blackboard\" "
 DataAsset="\"Object.SkeletalMeshes\" "
 AIPerceptionComponent="\"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0]\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense.DetectionByAffiliation\" "
-ActorComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
+ActorComponent=
 BehaviorTreeGraphNode_Root="\"Object.AI.AI|BehaviorTree\" "
 BehaviorTreeGraphNode="\"Object.AI.AI|BehaviorTree\" "
 AIGraphNode="\"Object.AI.AI|BehaviorTree\" "
-EdGraphNode="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
+EdGraphNode=
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
-SkeletalMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
-SkinnedMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
-MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
-PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
-SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
+SkeletalMeshComponent=
+SkinnedMeshComponent=
+MeshComponent=
+PrimitiveComponent=
+SceneComponent=
 AnimGraphNode_LayeredBoneBlend="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
 AnimGraphNode_BlendListBase="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
 AnimGraphNode_Base="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
-K2Node="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
+K2Node=
 CapsuleComponent=
 ShapeComponent=
 AnimSequence=
 AnimSequenceBase=
 AnimationAsset=
 PLayer_C=
-Character=
-Pawn=
+Character="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
+Pawn="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 Anim_TPC_Base_C=
 AnimInstance=
 DragDrop_C="\"Object.被拖动的控件\" "
@@ -1750,7 +1799,7 @@ AI_C=
 AI2_C=
 LandscapeEditorObject="\"Object.New Landscape.ImportLandscape_Layers.ImportLandscape_Layers[5]\" "
 Bullet_C="\"Object.As PLayer\" "
-StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
+StaticMeshComponent=
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[9]\" "
 BoxComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[10]\" "
 NewMap_C="\"Object.AI数组\" "
@@ -1765,14 +1814,23 @@ AIController=
 Controller=
 AI3_Child_C=
 gbl_C=
-gblbp_C=
+gblbp_C="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 走向玩家_C=
 BTTask_BlueprintBase=
 BTTaskNode=
 BTNode=
+ProgressBar="\"Object.Appearance.FillColorAndOpacity\" "
+WidgetComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
+AI_HealthBar_C=
+Door_Actor_C="\"Object.Actor.Tags\" "
+phy_C=
+PhysicalMaterial=
+PreviewMaterial="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" "
+Material="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" "
+MaterialInterface="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" "
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=MapCheck
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -1825,7 +1883,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 
 [RootWindow]
 ScreenPosition=X=633.000 Y=256.000
-WindowSize=X=1300.000 Y=740.000
+WindowSize=X=1310.000 Y=750.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1853,7 +1911,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Enemy
+ContentBrowserTab1.SelectedPaths=/Game/Enemy/EnemyGoblin
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1893,7 +1951,7 @@ ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
 
 [Directories2]
-UNR=../../../../Ue4 Projects/p1/Content
+UNR=../../../../Ue4 Projects/p1/Content/Map
 BRUSH=C:/Users/DELL/Documents/GitHub/UE4/Content/
 FBX=C:/Users/DELL/Documents/GitHub/UE4/Content/
 FBXAnim=C:/Users/DELL/Documents/GitHub/UE4/Content/
@@ -2805,6 +2863,8 @@ TextureEditor.TimeStamp=2022.10.15-08.38.50
 TextureEditor.LastCompileMethod=Unknown
 HierarchicalLODUtilities.TimeStamp=2022.10.15-08.38.45
 HierarchicalLODUtilities.LastCompileMethod=Unknown
+StaticMeshEditor.TimeStamp=2022.10.04-22.10.27
+StaticMeshEditor.LastCompileMethod=Unknown
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
@@ -2842,7 +2902,7 @@ BlendSpace=BlendSpace.Axis Settings.Horizontal Axis,BlendSpace.Axis Settings.Ver
 AimOffsetBlendSpace=AimOffsetBlendSpace.Axis Settings.Horizontal Axis,AimOffsetBlendSpace.Axis Settings.Vertical Axis,
 K2Node_VariableGet=K2Node_VariableGet.DefaultValueCategory.None,SkeletalMeshComponent.Collision.Collision,AI3_Child_C.Rendering.LOD,AI_C.Rendering.LOD,AI3_C.Rendering.LOD,CapsuleComponent.Collision.Collision,
 PLayer_C=PLayer_C.Rendering.LOD,
-K2Node_VariableSet=K2Node_VariableGet.DefaultValueCategory.None,SkeletalMeshComponent.Collision.Collision,AI3_Child_C.Rendering.LOD,AI_C.Rendering.LOD,AI3_C.Rendering.LOD,
+K2Node_VariableSet=K2Node_VariableGet.DefaultValueCategory.None,SkeletalMeshComponent.Collision.Collision,AI3_Child_C.Rendering.LOD,AI_C.Rendering.LOD,AI3_C.Rendering.LOD,CapsuleComponent.Collision.Collision,
 Anim_TPC_Base_C=
 DragDrop_C=
 InventoryUI_C=
@@ -2851,8 +2911,8 @@ PickUpUI_C=
 InventoryComponent_C=
 DragDropOperation=
 PlayerUI_C=
-PropertyWrapper=K2Node_VariableGet.DefaultValueCategory.None,SkeletalMeshComponent.Collision.Collision,AI3_Child_C.Rendering.LOD,AI_C.Rendering.LOD,AI3_C.Rendering.LOD,
-MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Normal Overrides,MaterialEditorInstanceConstant.ParameterGroups.Physical Surface,MaterialEditorInstanceConstant.ParameterGroups.Textures Overrides,
+PropertyWrapper=K2Node_VariableGet.DefaultValueCategory.None,SkeletalMeshComponent.Collision.Collision,AI3_Child_C.Rendering.LOD,AI_C.Rendering.LOD,AI3_C.Rendering.LOD,CapsuleComponent.Collision.Collision,
+MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Normal Overrides,MaterialEditorInstanceConstant.ParameterGroups.Physical Surface,MaterialEditorInstanceConstant.ParameterGroups.Textures Overrides,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,
 AI_Anim_C=
 AI_C=
 AI_Anim1_C=K2Node_VariableGet.DefaultValueCategory.None,SkeletalMeshComponent.Collision.Collision,AI3_Child_C.Rendering.LOD,AI_C.Rendering.LOD,AI3_C.Rendering.LOD,
@@ -2863,7 +2923,7 @@ Bullet_C=
 SphereComponent=SphereComponent.Collision.Collision,
 NewMap_C=
 AI3_C=
-CapsuleComponent=CapsuleComponent.Collision.Collision,
+CapsuleComponent=
 PostProcessVolume=PostProcessVolume.Lens.Lens
 BrushComponent=
 NewAnimBlueprint_C=
@@ -2873,11 +2933,20 @@ AI3_Child_C=
 gbl_C=
 BoxComponent=BoxComponent.Collision.Collision,
 StaticMeshComponent=StaticMeshComponent.Collision.Collision,
-gblbp_C=
+gblbp_C=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,
 MulticastInlineDelegatePropertyWrapper=K2Node_VariableGet.DefaultValueCategory.None,SkeletalMeshComponent.Collision.Collision,AI3_Child_C.Rendering.LOD,AI_C.Rendering.LOD,AI3_C.Rendering.LOD,
 走向玩家_C=
+ProgressBar=
+AI_HealthBar_C=
+NewBlueprint_C=K2Node_VariableGet.DefaultValueCategory.None,SkeletalMeshComponent.Collision.Collision,AI3_Child_C.Rendering.LOD,AI_C.Rendering.LOD,AI3_C.Rendering.LOD,CapsuleComponent.Collision.Collision,
+phy_C=
+SceneComponent=
+K2Node_MakeStruct=K2Node_MakeStruct.PinOptions.ShowPinForProperties,
+Landscape=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,
 
 [PlacementMode]
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Game/Door/Door_Actor.Door_Actor;
 RecentlyPlaced=/Game/Enemy/realAI/AI3.AI3;
 RecentlyPlaced=/Game/Enemy/EnemyGoblin/gblbp.gblbp;
 RecentlyPlaced=/Game/Enemy/AI.AI;
@@ -2930,10 +2999,9 @@ ChangeVariableType_Warning=False
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
-bShowGrid=False
 
 [MaterialInstanceEditor]
-bShowGrid=True
+bShowGrid=False
 bDrawGrid=False
 PrimType=1
 
